--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,13 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v2
       
-    - name: Set up environment and run SonarScanner
+    - name: Set up environment
       run: |
-        # Use Command Prompt to access environment variables
-        echo Path: %PATH%
-        echo GitHub Token: %SONAR_HOST_URL%
+        echo "Path: $PATH"
+        echo "Sonar Scanner Path: $SONAR_SCANNER_PATH"
         
-        # Run SonarScanner command
-        C:/sonar-scanner/bin/sonar-scanner -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=http://localhost:9000 -Dsonar.token=sqp_b1b9028638217f797048a9570753e3a125591c51
+    - name: Run SonarScanner
+      run: |
+        $SONAR_SCANNER_PATH/sonar-scanner -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=http://localhost:9000 -Dsonar.login=sqp_b1b9028638217f797048a9570753e3a125591c51
+      env:
+        Sonar_Scanner_Path: ${{ env.SONAR_SCANNER_PATH }}
