--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,11 @@ jobs:
       
     - name: Set up environment
       run: |
-        echo "Path: $PATH"
-        echo "Sonar Scanner Path: $SONAR_SCANNER_PATH"
+        Write-Host "Path: $env:PATH"
+        Write-Host "Sonar Scanner Path: $env:SONAR_SCANNER_PATH"
         
     - name: Run SonarScanner
       run: |
-        $SONAR_SCANNER_PATH/sonar-scanner -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=http://localhost:9000 -Dsonar.login=sqp_b1b9028638217f797048a9570753e3a125591c51
+        & $env:SONAR_SCANNER_PATH/sonar-scanner -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=http://localhost:9000 -Dsonar.login=sqp_b1b9028638217f797048a9570753e3a125591c51
       env:
-        Sonar_Scanner_Path: ${{ env.SONAR_SCANNER_PATH }}
+        Sonar_Scanner_Path: $env:SONAR_SCANNER_PATH
