--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,4 @@ jobs:
     - name: Set up environment
       run: |
         # Use PowerShell to access environment variables
-        Get-ChildItem Env: | ForEach-Object { Write-Host "$($_.Name): $($_.Value)" }
-        echo "Path: $env:PATH"
-        echo "Sonar Host URL: $env:SONAR_HOST_URL"
+        powershell -Command "Get-ChildItem Env: | ForEach-Object { Write-Host "$($_.Name): $($_.Value)" }" || { echo "Path: $PATH"; echo "Sonar Host URL: $SONAR_HOST_URL"; }
