--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,11 @@ jobs:
     - name: Run SonarScanner
       run: |
         if [ -x "$(command -v powershell)" ]; then
-          sonar-scanner -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_TOKEN
+          echo "Sonar Host URL: $SONAR_HOST_URL"
+          echo "Sonar Path: $SONAR_SCANNER_PATH"
         else
-          $SONAR_SCANNER_PATH/sonar-scanner -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_TOKEN
+          echo "Sonar Host URL: $SONAR_HOST_URL"
+          echo "Sonar Path: $SONAR_SCANNER_PATH"
         fi
       env:
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
