--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,14 +29,15 @@ jobs:
     - name: Run SonarScanner
       run: |
         if [ -x "$(command -v powershell)" ]; then
-          echo "Sonar Host URL: $SONAR_HOST_URL"
-          echo "Sonar Path: ${SONAR_SCANNER_PATH//\\//}"
-          "$SONAR_SCANNER_PATH\sonar-scanner" -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.token=sqp_b1b9028638217f797048a9570753e3a125591c51
+         echo "Sonar Host URL: $SONAR_HOST_URL"
+         echo "Sonar Path: ${SONAR_SCANNER_PATH//\\//}"
+         "$SONAR_SCANNER_PATH"/sonar-scanner -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.token=sqp_b1b9028638217f797048a9570753e3a125591c51
         else
-          echo "Sonar Host URL: $SONAR_HOST_URL"
-          echo "Sonar Path: ${SONAR_SCANNER_PATH//\\//}"
-          "$SONAR_SCANNER_PATH/sonar-scanner" -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.token=sqp_b1b9028638217f797048a9570753e3a125591c51
+        echo "Sonar Host URL: $SONAR_HOST_URL"
+        echo "Sonar Path: ${SONAR_SCANNER_PATH//\\//}"
+        "$SONAR_SCANNER_PATH"/sonar-scanner -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.token=sqp_b1b9028638217f797048a9570753e3a125591c51
         fi
+
       env:
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         SONAR_SCANNER_PATH: C:\sonar-scanner\bin
