--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,27 @@
-name: My Workflow
+name: Main Workflow
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
-  build:
+  sonarqube:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Check out code
-      uses: actions/checkout@v2
-      
-    - name: Set up environment
-      run: |
-        if [ -x "$(command -v powershell)" ]; then
-          # Use PowerShell to access environment variables
-          powershell -Command "Get-ChildItem Env: | ForEach-Object { Write-Host "$($_.Name): $($_.Value)" }"
-        else
-          echo "PowerShell is not available, falling back to Git Bash"
-          # Use Bash commands to access environment variables
-          echo "Path: $PATH"
-          echo "Sonar Host URL: $SONAR_HOST_URL"
-          echo "Sonar Path: ${SONAR_SCANNER_PATH//\\//}"
-        fi
-
-    - name: Run SonarScanner
-      run: |
-       echo "Sonar Host URL: $SONAR_HOST_URL"
-       echo "Sonar Path: $SONAR_SCANNER_PATH"
-       "$SONAR_SCANNER_PATH\sonar-scanner.bat" -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.token=sqp_b1b9028638217f797048a9570753e3a125591c51
-       shell: /usr/bin/bash -e {0}
-       env:
-       SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-       SONAR_SCANNER_PATH: C:\sonar-scanner
+      - uses: actions/checkout@v4
+        with:
+          # Disabling shallow clones is recommended for improving the relevancy of reporting
+          fetch-depth: 0
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        with:
+          args: >
+            -Dsonar.projectKey=test_repoaq1sw2de
+            -Dsonar.host.url=http://localhost:9000
+            -Dsonar.token=sqp_b1b9028638217f797048a9570753e3a125591c51
