--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,31 @@
-name: Main Workflow
+name: SonarQube Scan
 
 on:
   push:
     branches:
       - main
+      - master
+      - develop
   pull_request:
     types: [opened, synchronize, reopened]
 
 jobs:
   sonarqube:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v2
+    - name: Check out code
+      uses: actions/checkout@v2
+      
+    - name: Set up environment variables
+      run: |
+        echo "Setting up environment variables..."
+        export SONAR_HOST_URL=http://192.168.89.241/:9000
+        export SONAR_TOKEN=${{ secrets.SONAR_TOKEN }}
+        echo "SONAR_HOST_URL: $SONAR_HOST_URL"
+        echo "SONAR_TOKEN: $SONAR_TOKEN"
 
-      - name: Set up SonarQube environment variables
-        run: |
-          echo "Setting up SonarQube environment variables..."
-          echo "export SONAR_HOST_URL=${{ secrets.SONAR_HOST_URL }}" >> $GITHUB_ENV
-          echo "export SONAR_TOKEN=${{ secrets.SONAR_TOKEN }}" >> $GITHUB_ENV
-
-      - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@master
-        with:
-          projectBaseDir: .
+    - name: Run SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@master
+      with:
+        projectBaseDir: .
