--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,9 @@ on:
       - main
       - master
       - develop
+      - 'releases/**'
   pull_request:
-    types: [opened, synchronize, reopened]
+      types: [opened, synchronize, reopened]
 
 jobs:
   sonarqube:
@@ -20,12 +21,13 @@ jobs:
     - name: Set up environment variables
       run: |
         echo "Setting up environment variables..."
-        export SONAR_HOST_URL=http://192.168.89.241/:9000
-        export SONAR_TOKEN=${{ secrets.SONAR_TOKEN }}
+        export SONAR_HOST_URL=http://192.168.89.241:9000
+        export SONAR_TOKEN=your-sonar-token
         echo "SONAR_HOST_URL: $SONAR_HOST_URL"
         echo "SONAR_TOKEN: $SONAR_TOKEN"
 
     - name: Run SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
-      with:
-        projectBaseDir: .
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
