--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,15 @@ jobs:
         echo "Setting up environment variables..."
         export SONAR_HOST_URL='http://localhost/:9000'
         export SONAR_TOKEN='sqp_b1b9028638217f797048a9570753e3a125591c51'
+        export SONAR_PROJECT_KEY='test_repoaq1sw2de' # Add your SonarQube project key here
         echo "SONAR_HOST_URL: $SONAR_HOST_URL"
         echo "SONAR_TOKEN: $SONAR_TOKEN"
+        echo "SONAR_PROJECT_KEY: $SONAR_PROJECT_KEY"
         
     - name: Run SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }} 
+        # Use GitHub Secrets for the project key
