--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,44 @@
-name: SonarQube Scan
-
+name: Build
 on:
   push:
     branches:
-      - main
-      - master
-      - develop
-      - 'releases/**'
+      - main # the name of your main branch
   pull_request:
     types: [opened, synchronize, reopened]
-
 jobs:
-  sonarqube:
-    runs-on: ubuntu-latest
-
+  build:
+    name: Build
+    runs-on: windows-latest
     steps:
-    - name: Check out code
-      uses: actions/checkout@v2
-      
-    - name: Set up environment variables
-      run: |
-        echo "Setting up environment variables..."
-        export SONAR_HOST_URL='http://localhost/:9000'
-        export SONAR_TOKEN='sqp_b1b9028638217f797048a9570753e3a125591c51'
-        export SONAR_PROJECT_KEY='test_repoaq1sw2de' # Add your SonarQube project key here
-        echo "SONAR_HOST_URL: $SONAR_HOST_URL"
-        echo "SONAR_TOKEN: $SONAR_TOKEN"
-        echo "SONAR_PROJECT_KEY: $SONAR_PROJECT_KEY"
-        
-    - name: Run SonarQube Scan
-      uses: sonarsource/sonarqube-scan-action@master
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }} 
-        # Use GitHub Secrets for the project key
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.17
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Cache SonarQube packages
+        uses: actions/cache@v1
+        with:
+          path: ~\.sonar\cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache SonarQube scanner
+        id: cache-sonar-scanner
+        uses: actions/cache@v1
+        with:
+          path: .\.sonar\scanner
+          key: ${{ runner.os }}-sonar-scanner
+          restore-keys: ${{ runner.os }}-sonar-scanner
+      - name: Install SonarQube scanner
+        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
+        shell: powershell
+        run: |
+          New-Item -Path .\.sonar\scanner -ItemType Directory
+          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+      - name: Build and analyze
+        shell: powershell
+        run: |
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"example" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
+          dotnet build
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
