--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,5 @@ jobs:
         uses: actions/checkout@v2
 
       - name: SonarQube Scan
-        run: docker run --network host sonarsource/sonarqube-scan-action@master
+        run: docker run --network host sonarsource/sonarqube-scan-action:latest
+
