--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
             -e SONAR_TOKEN=sqp_00610d8d56af34cb0864023ecbbbebb8e637d5dc \
             sonarsource/sonar-scanner-cli \
             -Dsonar.projectKey=test_repoaq1sw2de \
-            -Dsonar.host.url=http://localhost:9000
+            -Dsonar.host.url=http://172.17.0.1:9000
