--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,8 @@ jobs:
       - name: SonarQube Scan
         run: |
           docker run --network host \
-            -e SONAR_TOKEN=sqp_00610d8d56af34cb0864023ecbbbebb8e637d5dc \
-            sonarsource/sonar-scanner-cli \
-            -Dsonar.projectKey=test_repoaq1sw2de \
-            -Dsonar.host.url=http://172.17.0.1:9000
+          -e SONAR_TOKEN=sqp_00610d8d56af34cb0864023ecbbbebb8e637d5dc \
+          sonarsource/sonar-scanner-cli:latest \
+          -Dsonar.projectKey=test_repoaq1sw2de \
+          -Dsonar.host.url=http://172.17.0.1:9000
+
